# Backend

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  rust-toolchain  settings.json  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: clippy.yml  review-ai.yml  rust.yml
src/: db.rs  main.rs
src/card/: mod.rs
src/mangopay/: card.rs  mod.rs  model.rs  user.rs  wallet.rs
src/user/: mod.rs  model.rs  token.rs
src/user/google/: google_token.rs  mod.rs
