[package]
name = "mecen_backend"
version = "0.1.0"
authors = ["MecenTeam"]
edition = "2021"

[dependencies]
mangopay = "0.1.4"
rocket = {version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
jwt = "0.13.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
jwks-client = "0.1.4"
futures = "0.3.21"
rocket-sentry = "0.11.0"

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]
